10. Troubleshooting/5. Network Policies/redis-db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faraz-redis-deploy
  labels:
    app: faraz-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faraz-redis
  template:
    metadata:
      labels:
        app: faraz-redis
    spec:
      containers:
      - name: redis
        image: "docker.io/redis:6.0.5"
        ports:
        - containerPort: 6379
