10. Troubleshooting/5. Network Policies/deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: secure-namespace
spec:
  podSelector:
    matchLabels:
      app: faraz-redis
  policyTypes:
  - Ingress
