10. Troubleshooting/5. Network Policies/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
  namespace: secure-namespace
spec:
  podSelector:
    matchLabels:
      app: faraz-redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: known-redis-member
    ports:
    - protocol: TCP
      port: 6379
